<resources>
    <string name="app_name">Yogis</string>
    <string name="welcome_to">Welcome to</string>
    <string name="yogis">YOGIS</string>
    <string name="yoga_instructors_helper">Yoga Instructors Helper</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_now">Register Now</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="welcome_back_glad_to_see_you_again">Welcome back! Glad to see you, Again!</string>
    <string name="remember_password">Remember Password?</string>
    <string name="otp_sub_title">Enter the verification code we just sent on your email address.</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="didn_t_receive_code">Didn’t receive code?</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="create_new_password">Create new password</string>
    <string name="create_new_strig_subtitle">Your new password must be unique from those previously used.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_changed">Password Changed!</string>
    <string name="password_changed_subtitle">Your password has been changed successfully.</string>
    <string name="forgot_password_subtitle">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="send_code">Send Code</string>
    <string name="hello_register_to_get_started">Hello! Register to get started</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="level">Teaching Level</string>
    <string name="yoga">Teaching Yoga</string>
    <string name="professional_information">Professional Information</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_name">User Name</string>
    <string name="ashtanga_yoga_instructor">Ashtanga Yoga Instructor</string>
    <string name="professional_details">Professional Details</string>
    <string name="ashtanga">Ashtanga</string>
    <string name="_2_years">2 Years</string>
    <string name="contact_details">Contact Details</string>
    <string name="_972_547628936">+972 547628936</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="personal_details">Personal Details</string>
    <string name="_12_jan_1995">12 Jan 1995</string>
    <string name="john_smith">John Smith</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="how_can_we_help_you_today">How can we help you today?</string>
    <string name="class_builder">Class Builder</string>
    <string name="plan_your_next_class">Plan your next class</string>
    <string name="pose_library">Pose Library</string>
    <string name="view_amp_filter_as_you_like"><![CDATA[View & filter as you like]]></string>
    <string name="teaching_mode">Teaching Mode</string>
    <string name="view_your_class_while_you_teach">view your class while you teach</string>
    <string name="view_my_profile">View My Profile</string>
    <string name="view_by_levels">View by Levels</string>
    <string name="view_by_types">View by Types</string>
    <string name="view_by_types_desc">Body parts and muscles</string>
    <string name="all_poses">All Poses</string>
    <string name="add_pose"> Add Pose</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="from_library">From Library</string>
    <string name="set_new_pose">Set New Pose</string>
    <string name="pose_name">Pose Name</string>
    <string name="pose_family">Pose Family</string>
    <string name="duration">Duration</string>
    <string name="description">Description</string>
    <string name="note">Notes</string>
    <string name="new_class_builder">New Class Builder</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_class_duration_minutes">Enter Class Duration (Minutes)</string>
    <string name="select_class_level">Select Class Level</string>
    <string name="start">Start</string>
    <string name="your_stretching_class">Your Stretching Class</string>
    <string name="_90_minutes">90 Minutes</string>
    <string name="add_new_pose">Add New Pose</string>
    <string name="single_pose">Single pose</string>
    <string name="add_new_flow">Add New Flow</string>
    <string name="sequence_of_exercises">Sequence of exercises</string>
    <string name="view_class_plan">View Class Plan</string>
    <string name="upload_take_photo">Upload / Take Photo</string>
    <string name="body_parts_and_muscles">Body parts and muscles</string>
    <string name="current_password">Current Password</string>
    <string name="verify_new_password">Verify New Password</string>
    <string name="update_password">Update Password</string>
    <string name="ct_title">Stretching Class</string>
    <string name="ct_duration">90 Minutes</string>
    <string name="ct_class_id">class_id</string>
    <string name="ct_level">Beginners</string>
    <string name="ct_item_duration">5 Minutes</string>
    <string name="ct_item_title">Meditation</string>
    <string name="ct_item_sub">Teachers Note</string>
    <string name="ct_add_pose_title">Add New Pose</string>
    <string name="ct_add_pose_sub">Single pose</string>
    <string name="ct_add_flow_title">Add New Flow</string>
    <string name="ct_add_flow_sub">Sequence of exercises</string>
    <string name="save_class">Save Class</string>
    <string name="poses_by_levels">Poses By Levels</string>
    <string name="beginners">Beginners</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="poses_library">Poses Library</string>
    <string name="poses_family">Poses Family</string>
    <string name="flows">Flows</string>
    <string name="beginners_poses">Beginners Poses</string>
    <string name="search">Search</string>
    <string name="pose">Pose</string>
    <string name="poses_by_family">Poses by Family</string>
    <string name="_3_5_rounds">3–5 Rounds</string>
    <string name="surya_namaskar_a">Surya Namaskar A</string>
    <string name="start_teaching">Start Teaching</string>
    <string name="finish_class">Finish Class</string>
    <string name="adho_mukha_shvanasana">Adho Mukha Shvanasana</string>
    <string name="notes">Notes</string>
    <string name="_2_minutes">2 Minutes</string>
    <string name="forward_bends">Forward Bends</string>
    <string name="log_out">Log Out</string>
    <string name="begginers">Beginners</string>
    <string name="add_flow">Add Flow</string>
    <string name="Flows">Flows</string>
    <string name="define_new_flow">Define New Flow</string>
    <string name="define_new_pose">Define New Pose</string>
    <string name="category_or_level">Category or Level</string>
    <string name="intermediate_poses">Intermediate Poses</string>
    <string name="advanced_poses">Advanced Poses</string>
    <string name="standing_poses">Standing Poses</string>
    <string name="backbends_arches">Backbends (Arches)</string>
    <string name="twists">Twists</string>
    <string name="inversions">Inversions</string>
    <string name="seated_poses">Seated Poses</string>
    <string name="boat_poses">Boat Poses</string>
    <string name="balancing_poses">Balancing Poses</string>
    <string name="start_on_all_fours_tuck_your_toes">Start on all fours, tuck your toes…</string>
    <string name="keep_feet_hip_width_apart">Keep feet hip-width apart…</string>
    <string name="discard_changes_title">Discard changes?</string>
    <string name="discard_changes_message">Your changes won’t be saved. Continue?</string>
    <string name="image_is_uploading_should_take_a_few_seconds">Image is uploading, should take a few seconds…</string>
    <string name="changing_password_please_wait">Changing password, please wait…</string>
    <string name="change_photo">Change Photo</string>
    <string name="loadinf_images_please_wait">Loadinf images, please wait…</string>
    <string name="duration_seconds">Duration (seconds)</string>
    <string name="select_yoga_type">Select Yoga Type</string>
    <string name="images_credits_2013_2025_workoutlabs_llc_all_rights_reserved">Images Credits: 2013-2025 WorkoutLabs, LLC. All rights reserved.</string>
    <string-array name="class_levels">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>
    <string-array name="pose_categories_labels">
        <item>Standing poses</item>
        <item>Forward bends</item>
        <item>Backbend arches</item>
        <item>Twists</item>
        <item>Inversions</item>
        <item>Seated poses</item>
        <item>Boat poses</item>
        <item>Balancing poses</item>
    </string-array>
    <string-array name="pose_categories_values">
        <item>standingPoses</item>
        <item>forwardBends</item>
        <item>backendArches</item>
        <item>twists</item>
        <item>inversions</item>
        <item>seatedPoses</item>
        <item>boatPoses</item>
        <item>balancingPoses</item>
    </string-array>


</resources>