<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_pose_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ap_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.85"
        android:orientation="horizontal"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_pd_back"
        style="@style/Widget.Yogis.Button.Back"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:icon="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pd_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/adho_mukha_shvanasana"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/urbanist_bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_pd_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_pd_images"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_pd_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_pd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:paddingTop="16dp"
        android:paddingEnd="12dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbarThumbVertical="@drawable/scrollbar_thumb"
        android:scrollbarTrackVertical="@drawable/scrollbar_track"
        app:layout_constraintTop_toBottomOf="@id/vp_pd_images"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ap_action_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/level"
                    android:textSize="14sp"
                    android:fontFamily="@font/urbanist"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_pd_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beginners"
                    android:textSize="14sp"
                    android:fontFamily="@font/urbanist"
                    android:textColor="@color/sub_titles_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pose_family"
                    android:textSize="14sp"
                    android:fontFamily="@font/urbanist"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_pd_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forward_bends"
                    android:textSize="14sp"
                    android:fontFamily="@font/urbanist"
                    android:textColor="@color/sub_titles_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        android:textSize="14sp"
                        android:fontFamily="@font/urbanist"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_pd_duration_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/__repetitions"
                        android:textSize="14sp"
                        android:fontFamily="@font/urbanist"
                        android:textColor="@color/sub_titles_text"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_pd_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_minutes"
                    android:textSize="14sp"
                    android:fontFamily="@font/urbanist"
                    android:textColor="@color/sub_titles_text"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="14sp"
                android:fontFamily="@font/urbanist"
                android:textColor="@color/black"
                android:paddingVertical="8dp"/>

            <TextView
                android:id="@+id/tv_pd_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_on_all_fours_tuck_your_toes"
                android:textSize="14sp"
                android:fontFamily="@font/urbanist"
                android:textColor="@color/sub_titles_text"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:id="@+id/tv_pd_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textSize="14sp"
                android:fontFamily="@font/urbanist"
                android:textColor="@color/black"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"/>

            <TextView
                android:id="@+id/tv_pd_notes_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keep_feet_hip_width_apart"
                android:textSize="14sp"
                android:fontFamily="@font/urbanist"
                android:textColor="@color/sub_titles_text"
                android:lineSpacingExtra="4dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_pose"
        style="@style/Widget.Yogis.Button.Primary"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:text="@string/add_pose"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_ap_action_button"/>


    <TextView
        android:id="@+id/tv_back_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist"
        android:text="@string/back_to_main_menu"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/btn_add_pose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
